--- a/Package.json
+++ b/Package.json
@@ -2,6 +2,9 @@
   "name": "typingmind-mcp-web",
   "version": "1.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=20"
+  },
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
